--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -11,6 +11,12 @@
 
 
     <!-- Registration Form -->
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/img_4973" />
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
