--- a/app/src/main/res/layout/student_track.xml
+++ b/app/src/main/res/layout/student_track.xml
@@ -8,25 +8,27 @@
     tools:context=".StudentTrack">
 
     <!-- Google Map Fragment-->
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="395dp"
-        android:layout_weight="1" />
 
     <!-- Other Ui -->
-    <Button
-        android:id="@+id/btnTrackBus"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Track Another Bus" />
 
-    <TextView
-        android:id="@+id/statusText"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:text="Tracking: UITM Bus #12"
-        android:textSize="16sp" />
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/img_4973" />
+
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="413dp"
+            android:layout_height="405dp"
+            android:layout_weight="1" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </LinearLayout>
