--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -12,10 +12,16 @@
 
     <!-- Registration Form -->
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/busImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/img_4973" />
+        android:adjustViewBounds="true"
+        android:scaleType="fitEnd"
+        android:src="@drawable/img_4973"
+        android:contentDescription="Bus Image"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <LinearLayout
         android:layout_width="0dp"
