--- a/app/src/main/res/menu/driver_menu.xml
+++ b/app/src/main/res/menu/driver_menu.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/nav_scan"
-
-        android:title="Trace Bus"/>
+        android:icon="@drawable/qr_scan"
+        android:title="Scan QR"/>
     <item
         android:id="@+id/nav_profile"
-
+        android:icon="@drawable/profile"
         android:title="Profile"/>
 </menu>
