--- a/app/src/main/res/layout/student_profile.xml
+++ b/app/src/main/res/layout/student_profile.xml
@@ -27,10 +27,13 @@
 
         <!-- Profile Photo -->
         <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:background="@color/white"
-            android:contentDescription="Profile Photo"/>
+            android:id="@+id/profileImage"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center_horizontal"
+            android:scaleType="centerCrop"
+            android:src="@drawable/profile_pic" />
 
         <!-- User Info -->
         <LinearLayout
