--- a/app/src/main/res/layout/driver_profile.xml
+++ b/app/src/main/res/layout/driver_profile.xml
@@ -65,8 +65,9 @@
         </LinearLayout>
     </LinearLayout>
 
-    <!-- Settings Button -->
+    <!-- Change Password Button -->
     <LinearLayout
+        android:id="@+id/btnChangePassword"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:orientation="horizontal"
@@ -98,6 +99,7 @@
 
     <!-- Log Out Button -->
     <LinearLayout
+        android:id="@+id/btnLogout"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:orientation="horizontal"
