--- a/app/src/main/res/layout/driver_profile.xml
+++ b/app/src/main/res/layout/driver_profile.xml
@@ -87,7 +87,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Setting"
+            android:text="Change Password"
             android:layout_marginStart="8dp"/>
 
         <ImageView
