--- a/app/src/main/res/layout/driver_profile.xml
+++ b/app/src/main/res/layout/driver_profile.xml
@@ -72,7 +72,7 @@
         android:layout_height="48dp"
         android:orientation="horizontal"
         android:layout_marginTop="16dp"
-        android:background="#B0B0B0"
+        android:background="#B084F4"
         android:gravity="center_vertical"
         android:paddingStart="8dp"
         android:paddingEnd="8dp">
@@ -88,6 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Change Password"
+            android:textStyle="bold"
             android:layout_marginStart="8dp"/>
 
         <ImageView
@@ -104,7 +105,7 @@
         android:layout_height="48dp"
         android:orientation="horizontal"
         android:layout_marginTop="8dp"
-        android:background="#B0B0B0"
+        android:background="#B084F4"
         android:gravity="center_vertical"
         android:paddingStart="8dp"
         android:paddingEnd="8dp">
@@ -120,6 +121,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Log out"
+            android:textStyle="bold"
             android:layout_marginStart="8dp"/>
 
         <ImageView
