--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -7,26 +7,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".LoginActivity">
+    tools:context=".LoginActivity"
+    android:background="@drawable/img_4973">
 
-
-    <ImageView
-        android:id="@+id/busImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:scaleType="fitEnd"
-        android:src="@drawable/img_4973"
-        android:contentDescription="Bus Image"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginBottom="24dp"
+            android:layout_gravity="center_horizontal"
+            android:contentDescription="App Logo"
+            android:src="@drawable/logouitm" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -42,7 +39,7 @@
                 android:layout_gravity="center"
                 android:layout_marginBottom="24dp"
                 android:contentDescription="App Logo"
-                android:src="@drawable/logouitm" />
+                android:src="@drawable/logo_apps" />
 
             <EditText
                 android:id="@+id/editEmail"
