--- a/app/src/main/res/layout/driver_profile.xml
+++ b/app/src/main/res/layout/driver_profile.xml
@@ -80,8 +80,8 @@
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@android:drawable/ic_menu_manage"
-            android:contentDescription="Settings"/>
+            android:src="@drawable/changepassword"
+            android:contentDescription="Password"/>
 
         <TextView
             android:layout_width="0dp"
@@ -89,16 +89,40 @@
             android:layout_weight="1"
             android:text="Change Password"
             android:textStyle="bold"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginStart="8dp"
+            android:textColor="#FFFFFF"/>
+
+    </LinearLayout>
+
+    <!-- Log Out Button -->
+    <LinearLayout
+        android:id="@+id/aboutUs"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:orientation="horizontal"
+        android:layout_marginTop="8dp"
+        android:background="#B084F4"
+        android:gravity="center_vertical"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp">
 
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@android:drawable/ic_media_next"
-            android:contentDescription="Arrow"/>
+            android:src="@drawable/aboutus"
+            android:contentDescription="AboutUs"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="About Us"
+            android:textStyle="bold"
+            android:layout_marginStart="8dp"
+            android:textColor="#FFFFFF"/>
+
     </LinearLayout>
 
-    <!-- Log Out Button -->
     <LinearLayout
         android:id="@+id/btnLogout"
         android:layout_width="match_parent"
@@ -113,7 +137,7 @@
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@android:drawable/ic_lock_power_off"
+            android:src="@drawable/logout"
             android:contentDescription="Log Out"/>
 
         <TextView
@@ -122,18 +146,11 @@
             android:layout_weight="1"
             android:text="Log out"
             android:textStyle="bold"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginStart="8dp"
+            android:textColor="#FFFFFF"/>
 
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@android:drawable/ic_media_next"
-            android:contentDescription="Arrow"/>
     </LinearLayout>
 
-    <!-- Spacer that pushes bottom nav down -->
-
-    <!-- Bottom NavigationView placed at bottom -->
 
     <LinearLayout
         android:layout_width="match_parent"
