--- a/app/src/main/res/layout/student_profile.xml
+++ b/app/src/main/res/layout/student_profile.xml
@@ -65,42 +65,64 @@
         </LinearLayout>
     </LinearLayout>
 
-    <!-- Log Out Button -->
+    <!-- Change Password Button -->
     <LinearLayout
-
         android:id="@+id/btnChangePassword"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:orientation="horizontal"
         android:layout_marginTop="16dp"
         android:background="#B084F4"
-        android:textColor="#a13df2"
         android:gravity="center_vertical"
-        android:orientation="horizontal"
         android:paddingStart="8dp"
         android:paddingEnd="8dp">
 
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:contentDescription="Settings"
-            android:src="@android:drawable/ic_menu_manage" />
+            android:src="@drawable/changepassword"
+            android:contentDescription="Password"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:layout_weight="1"
+            android:text="Change Password"
             android:textStyle="bold"
-            android:text="Change Password" />
+            android:layout_marginStart="8dp"
+            android:textColor="#FFFFFF"/>
+
+    </LinearLayout>
+
+    <!-- Log Out Button -->
+    <LinearLayout
+        android:id="@+id/aboutUs"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:orientation="horizontal"
+        android:layout_marginTop="8dp"
+        android:background="#B084F4"
+        android:gravity="center_vertical"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp">
 
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:contentDescription="Arrow"
-            android:src="@android:drawable/ic_media_next" />
+            android:src="@drawable/aboutus"
+            android:contentDescription="AboutUs"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="About Us"
+            android:textStyle="bold"
+            android:layout_marginStart="8dp"
+            android:textColor="#FFFFFF"/>
+
     </LinearLayout>
 
-<!--    Log Out-->
     <LinearLayout
         android:id="@+id/btnLogout"
         android:layout_width="match_parent"
@@ -108,7 +130,6 @@
         android:orientation="horizontal"
         android:layout_marginTop="8dp"
         android:background="#B084F4"
-        android:textColor="#222222"
         android:gravity="center_vertical"
         android:paddingStart="8dp"
         android:paddingEnd="8dp">
@@ -116,7 +137,7 @@
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@android:drawable/ic_lock_power_off"
+            android:src="@drawable/logout"
             android:contentDescription="Log Out"/>
 
         <TextView
@@ -125,18 +146,10 @@
             android:layout_weight="1"
             android:text="Log out"
             android:textStyle="bold"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginStart="8dp"
+            android:textColor="#FFFFFF"/>
 
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@android:drawable/ic_media_next"
-            android:contentDescription="Arrow"/>
     </LinearLayout>
-
-    <!-- Spacer that pushes bottom nav down -->
-
-    <!-- Bottom NavigationView placed at bottom -->
 
     <LinearLayout
         android:layout_width="match_parent"
